package util;
public class Constantes {

    public static final int TOTAL_FILAS = 100;
    public static final int TOTAL_COLUMNAS = 28;
    public static final int VISIBLE_FILAS = 15;
    public static final int VISIBLE_COLUMNAS = 9;
    
    public static final int ANCHO_CELDA = 7;
    public static final String CELDA_VACIA = "       ";
    
    public static final char COMANDO_ARRIBA = 'w';
    public static final char COMANDO_ABAJO = 's';
    public static final char COMANDO_IZQUIERDA = 'a';
    public static final char COMANDO_DERECHA = 'd';
    public static final char COMANDO_EDITAR = 'e';
    public static final char COMANDO_SALIR = 'q';
    

    private Constantes() {

    }
}