@startuml DiagramaClases-V004
package modelo {
    hide empty members
    abstract class Celda {
    }
    
    class CeldaTexto {
    }
    
    class CeldaFormula {
}
    
    class CeldaReferencia {
 }
    
    class Matriz {
}
    
    class Posicion {
}
}

package controlador {
    hide empty members
    class ControladorHoja {
   }
}

package util {
    hide empty members
    class Teclado {
   }
    
    class Constantes {
 }
    
    class Utilidades {
   }
}

package vista {
    hide empty members
    class InterfazUsuario {
 }
    
    class VisualizadorHoja {
    }
}

Celda <|-- CeldaTexto
Celda <|-- CeldaFormula
Celda <|-- CeldaReferencia
Matriz o-- Celda
ControladorHoja o- Matriz
ControladorHoja o-- Posicion
InterfazUsuario o-- ControladorHoja
InterfazUsuario o-- VisualizadorHoja
InterfazUsuario o-- Teclado
CeldaReferencia o-- Matriz

@enduml